add exchange operation