@@ -8,6 +8,8 @@ import org.springframework.data.mongodb.repository.config.EnableMongoRepositorie
 @SpringBootApplication
 @EnableMongoRepositories("com.gorbatenko.budget.repository")
 public class BudgetApplication extends SpringBootServletInitializer {
+
+    // for launch using Intellij Idea need to add "VM options" end put there "--add-opens=java.base/java.time=ALL-UNNAMED"
     public static void main(String[] args) {
         SpringApplication.run(BudgetApplication.class, args);
     }
